<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
<<<<<<< HEAD:res/layout/main.xml
    android:layout_height="fill_parent">
    
   <TextView android:id="@+id/txt_status_lbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:paddingTop="4dip"
        android:text="@string/str_status_lbl"/>
        
    <TextView android:id="@+id/txt_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:paddingTop="4dip"
        android:text="@string/str_status"/>
        
    <TextView android:id="@+id/txt_accuracy_lbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:paddingTop="4dip"
        android:text="@string/str_accuracy_lbl"/>
        
    <TextView android:id="@+id/txt_accuracy"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal" 
        android:paddingTop="4dip"
        android:text="@string/str_accuracy"/>
        
    <TextView android:id="@+id/txt_coords"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal" 
        android:paddingTop="4dip"
        android:text="@string/str_coords"/>

=======
    android:layout_height="wrap_content" 
    android:text="Hello World, Cow"
    />
>>>>>>> 7aa80e39323ff39bbebecb14ee12da4597ed3aec:res/layout/main.xml
</LinearLayout>

